# notify-bot-dut

./: .env-example  Cargo.toml  README.md  build.sh  config.json.example
migration/: Cargo.toml
migration/sql/: schema.sql
migration/src/: lib.rs  m20250831_193225_notice_sent.rs
src/: bot.rs  cli.rs  controller.rs  database.rs  entity.rs  fetch.rs  lib.rs  main.rs  scheduler.rs  schema.sql  utils.rs
src/entities/: mod.rs  notice_sent.rs  prelude.rs
tests/: bot_telegram_test.rs  fetch_all_test.rs  fetch_test.rs  filter_notice_test.rs  run_test.rs  send_notice_test.rs  test_database.rs  test_env.rs  test_internet.rs  test_unsent.rs
